// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders builder goals 1`] = `
<div
  className="container"
>
  <div
    className="sortSearchBar"
  >
    <div
      className="createContainer"
    >
      <div
        className="createButton"
        onClick={[Function]}
      >
        Create Goal
      </div>
    </div>
  </div>
  <div
    className="bottomContainer"
  >
    <div
      className="itemsList"
    >
      <div
        className="emptyMessage"
      >
        <div
          className="emptyLogo"
        />
        <div
          className="emptyLabel"
        >
          No Goals
        </div>
      </div>
    </div>
    <div
      className="itemContainer"
    />
  </div>
</div>
`;

exports[`renders goal create 1`] = `
<div
  className="container"
>
  <div
    className="sortSearchBar"
  >
    <div
      className="createContainer"
    >
      <div
        className="createButton"
        onClick={[Function]}
      >
        Create Goal
      </div>
    </div>
  </div>
  <div
    className="bottomContainer"
  >
    <div
      className="itemsList compressed"
    >
      <div
        className="emptyMessage"
      >
        <div
          className="emptyLogo"
        />
        <div
          className="emptyLabel"
        >
          No Goals
        </div>
      </div>
    </div>
    <div
      className="itemContainer visible"
    >
      <Connect(Apollo(GoalCreate))
        onClose={[Function]}
        routeBase="/builder/goals"
      />
    </div>
  </div>
</div>
`;
